# TourGuide

./: .gitignore  README.md
iOS/TourDruid/TourDruid/: AnswerViewController.h  AnswerViewController.m  AppDelegate.h  AppDelegate.m  ImagePickerViewController.h  ImagePickerViewController.m  InfoViewController.h  InfoViewController.m  MapViewController.h  MapViewController.m  TDBuildingRanking.h  TDBuildingRanking.m  TDConstants.h  TDConstants.m  TDHTTPClient.h  TDHTTPClient.m  TDResponse.h  TDResponse.m  TourDruid-Info.plist  TourDruid-Prefix.pch  ViewController.h  ViewController.m  WrongAnswerViewController.h  WrongAnswerViewController.m  main.m  ssViewController.h  ssViewController.m
iOS/TourDruid/TourDruid.xcodeproj/: project.pbxproj
iOS/TourDruid/TourDruidTests/: TourDruidTests-Info.plist  TourDruidTests.h  TourDruidTests.m
paper/: Makefile  TourDruid.tex  TourDruidbib.bib  application_architecture.tex  conclusion.tex  dataset.tex  demonstration.tex  future.tex  introduction.tex  nips10submit_e.sty  procedure.tex  results.tex
spotter/: app.js
spotter/routes/: classifier.js
spotter/views/: index.ejs
trainer/: CMakeLists.txt  Makefile  feature_extractor.cpp  feature_extractor.h  feature_extractor.hpp  file_utils.hpp  predictor.cpp  trainer.cpp  vocabtree.cpp  vocabtree.hpp
trainer/results/: Results_SIFT.txt  Results_SIFT_2187.txt  Results_SIFT_243.txt  Results_SIFT_728.txt  Results_STAR_2187.txt  Results_STAR_243.txt  Results_STAR_728.txt  calc_avg_std.py
trainer/test_suite/: test_suite.cpp  test_suite_old.cpp
video/: captions.srt
(+15 files in other folders)
